--- a/Gamezone.html
+++ b/Gamezone.html
@@ -16,7 +16,7 @@ body {
     min-height: 100vh;
 }
 .container {
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.95);
     border-radius: 24px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     padding: 20px;
@@ -50,12 +50,21 @@ audio { display: none; }
     padding: 20px;
     border-radius: 16px;
     background: #ffd6e8;
+    animation: fadeIn 0.5s;
+}
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
 
 /* Snake */
 #snakeCanvas {
     background: #fff7c2;
     border-radius: 12px;
+    transition: transform 0.2s;
+}
+#snakeCanvas:hover {
+    transform: scale(1.05);
 }
 
 /* Tic Tac Toe */
@@ -75,6 +84,11 @@ audio { display: none; }
     font-size: 36px;
     cursor: pointer;
     border-radius: 8px;
+    transition: transform 0.2s, background 0.2s;
+}
+.ttt-cell:hover {
+    transform: scale(1.1);
+    background: #fff7c2;
 }
 
 /* Clicker */
@@ -84,7 +98,10 @@ audio { display: none; }
     background: #fff7c2;
     border-radius: 16px;
     cursor: pointer;
+    transition: transform 0.2s;
 }
+#clickerButton:hover { transform: scale(1.1);}
+#timer { font-weight: bold; margin-top: 10px; font-size: 18px; }
 </style>
 </head>
 <body>
@@ -120,6 +137,7 @@ audio { display: none; }
         <h2>Clicker 🖱️</h2>
         <p>Počet kliků: <span id="clickCount">0</span></p>
         <button id="clickerButton">Klikni mě!</button>
+        <p id="timer">Čas: 10s</p>
     </div>
 </div>
 
@@ -145,7 +163,6 @@ const box = 20;
 let snake = [{x: 8*box, y: 8*box}];
 let dir;
 let food = {x: Math.floor(Math.random()*15)*box, y: Math.floor(Math.random()*15)*box};
-
 document.addEventListener("keydown",direction);
 function direction(event){
     if(event.keyCode == 37 && dir != "RIGHT") dir = "LEFT";
@@ -153,7 +170,6 @@ function direction(event){
     else if(event.keyCode == 39 && dir != "LEFT") dir = "RIGHT";
     else if(event.keyCode == 40 && dir != "UP") dir = "DOWN";
 }
-
 function drawSnake(){
     ctx.fillStyle = "#fff7c2";
     ctx.fillRect(0,0,canvas.width,canvas.height);
@@ -172,9 +188,7 @@ function drawSnake(){
 
     if(snakeX == food.x && snakeY == food.y){
         food = {x: Math.floor(Math.random()*15)*box, y: Math.floor(Math.random()*15)*box};
-    } else {
-        snake.pop();
-    }
+    } else { snake.pop(); }
 
     let newHead = {x: snakeX, y: snakeY};
     for(let i=0;i<snake.length;i++){
@@ -192,7 +206,6 @@ const tttGrid = document.getElementById('tttGrid');
 const tttResult = document.getElementById('tttResult');
 let tttBoard = ["","","","","","","","",""];
 let tttTurn = "X";
-
 function createTTT(){
     tttGrid.innerHTML = "";
     for(let i=0;i<9;i++){
@@ -231,13 +244,33 @@ function checkTTT(){
 }
 createTTT();
 
-// -------- Clicker --------
+// -------- Clicker s časem --------
 let clicks = 0;
+let clickTime = 10;
 const clickDisplay = document.getElementById('clickCount');
-document.getElementById('clickerButton').addEventListener('click', ()=>{
-    clicks++; clickDisplay.textContent = clicks;
+const timerDisplay = document.getElementById('timer');
+const clickBtn = document.getElementById('clickerButton');
+
+function startClicker(){
+    clicks = 0;
+    clickTime = 10;
+    clickDisplay.textContent = clicks;
+    timerDisplay.textContent = "Čas: "+clickTime+"s";
+    const interval = setInterval(()=>{
+        clickTime--;
+        timerDisplay.textContent = "Čas: "+clickTime+"s";
+        if(clickTime<=0){
+            clearInterval(interval);
+            alert("Konec! Tvoje skóre: "+clicks);
+        }
+    },1000);
+}
+
+clickBtn.addEventListener('click', ()=>{
+    clicks++;
+    clickDisplay.textContent = clicks;
+    if(clickTime===10){ startClicker(); } // spustí čas při prvním kliknutí
 });
 </script>
 </body>
 </html>
-
