Adding gamezone.html to index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     
     <a href="Calendar.html">Pastelový funkční kalendář</a>
     <a href="Horoskop.html">Denní horoskop</a>
-    
+    <a href="Gamezone.html">Herní zóna</a>
     <a href="Blog.html">Vytvoř si svůj vlastní blog!</a>
 </div>
 
